--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,12 +9,10 @@
 				"--disable-extensions",
 				"--extensionDevelopmentPath=${workspaceFolder}/taqueria-vscode-extension"
 			],
-			"outFiles": [
-				"${workspaceFolder}/taqueria-vscode-extension/out/**/*.js"
-			],
+			"outFiles": ["${workspaceFolder}/taqueria-vscode-extension/out/**/*.js"],
 			"preLaunchTask": "build-and-watch-vscode",
 			"env": {
-				"LogLevel": "warn",
+				"LogLevel": "debug",
 				"InstallDevPlugins": "false"
 			}
 		},
