Proxy Deno dependencies imports trough an HTTP Proxy

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -100,6 +100,9 @@ jobs:
       - name: Build the binary for ${{ matrix.os }}
         id: build-bin
         shell: bash
+        env:
+          HTTP_PROXY: ${{ secrets.DENO_HTTP_PROXY }}
+          HTTPS_PROXY: ${{ secrets.DENO_HTTP_PROXY }}
         run: |
           BUILD=`git rev-parse --short "$GITHUB_SHA"`
           TAQ_VERSION="${TAQ_VERSION/\//-}"
@@ -216,6 +219,9 @@ jobs:
       - run: npm ci
 
       - name: Build all
+        env:
+          HTTP_PROXY: ${{ secrets.DENO_HTTP_PROXY }}
+          HTTPS_PROXY: ${{ secrets.DENO_HTTP_PROXY }}
         run: |
           npm run build-types
           npm run build:packages 
