--- a/taqueria-plugin-contract-types/package.json
+++ b/taqueria-plugin-contract-types/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-contract-types",
-	"version": "0.27.2-alpha",
+	"version": "0.25.16-rc",
 	"main": "index.cjs",
 	"module": "index.js",
 	"source": "index.ts",
@@ -34,10 +34,10 @@
 		"typescript": "^4.7.2"
 	},
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.27.2-alpha",
-		"@taquito/michel-codec": "^13.0.1",
-		"@taquito/signer": "^13.0.1",
-		"@taquito/taquito": "^13.0.1",
+		"@taqueria/node-sdk": "^0.25.16-rc",
+		"@taquito/michel-codec": "^15.0.0",
+		"@taquito/signer": "^15.0.0",
+		"@taquito/taquito": "^15.0.0",
 		"bignumber.js": "^9.0.2",
 		"fast-glob": "^3.2.11"
 	},
