--- a/taqueria-plugin-flextesa/package.json
+++ b/taqueria-plugin-flextesa/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-flextesa",
-	"version": "0.27.2-alpha",
+	"version": "0.25.16-rc",
 	"description": "A plugin for Taqueria providing local sandbox capabilities built on Flextesa",
 	"keywords": [
 		"taqueria",
@@ -23,7 +23,7 @@
 	"types": "./index.ts",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"build-plugin": "npx tsc -noEmit && npx parcel build --no-cache  2>&1",
+		"build-plugin": "npx tsc -noEmit -p ./tsconfig.json && npx tsup",
 		"build-dev": "npm run build-docker && npm run build-plugin",
 		"build": "npm run build-plugin",
 		"pluginInfo": "npx ts-node index.ts --taqRun pluginInfo --i18n {\"foo:\"\"bar\"}"
@@ -36,15 +36,31 @@
 		"directory": "taqueria-plugin-flextesa"
 	},
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.27.2-alpha",
-		"@taqueria/protocol": "^0.27.2-alpha",
+		"@taqueria/node-sdk": "^0.25.16-rc",
+		"@taqueria/protocol": "^0.25.16-rc",
 		"async-retry": "^1.3.3",
 		"fast-glob": "^3.2.11",
 		"portfinder": "^1.0.28"
 	},
 	"devDependencies": {
 		"@types/async-retry": "^1.4.4",
-		"parcel": "^2.8.0",
+		"tsup": "^6.1.3",
 		"typescript": "^4.7.2"
+	},
+	"tsup": {
+		"entry": [
+			"index.ts"
+		],
+		"sourcemap": true,
+		"target": "node16",
+		"outDir": "./",
+		"dts": true,
+		"clean": false,
+		"skipNodeModulesBundle": true,
+		"platform": "node",
+		"format": [
+			"esm",
+			"cjs"
+		]
 	}
 }
