--- a/taqueria-plugin-jest/package.json
+++ b/taqueria-plugin-jest/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-jest",
-	"version": "0.27.2-alpha",
+	"version": "0.25.16-rc",
 	"main": "index.cjs",
 	"module": "index.js",
 	"source": "index.ts",
@@ -27,11 +27,11 @@
 		"directory": "taqueria-plugin-jest"
 	},
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.27.2-alpha",
-		"@taqueria/plugin-contract-types": "^0.14.4",
-		"@taquito/signer": "^13.0.1",
-		"@taquito/taquito": "^13.0.1",
-		"@taquito/utils": "^13.0.1",
+		"@taqueria/node-sdk": "^0.25.16-rc",
+		"@taqueria/plugin-contract-types": "^0.25.16-rc",
+		"@taquito/signer": "^15.0.0",
+		"@taquito/taquito": "^15.0.0",
+		"@taquito/utils": "^15.0.0",
 		"@types/jest": "^27.5.2",
 		"async-retry": "^1.3.3",
 		"bignumber.js": "^9.1.0",
