--- a/taqueria-plugin-metadata/package.json
+++ b/taqueria-plugin-metadata/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-metadata",
-	"version": "0.27.2-alpha",
+	"version": "0.25.16-rc",
 	"description": "A plugin for Taqueria providing metadata creation and validation.",
 	"keywords": [
 		"taqueria",
@@ -20,7 +20,7 @@
 		}
 	},
 	"scripts": {
-		"build": "npx tsc -noEmit -p ./tsconfig.json && npx parcel build --no-cache 2>&1"
+		"build": "npx tsc -noEmit -p ./tsconfig.json && npx tsup"
 	},
 	"author": "ECAD Labs",
 	"license": "Apache-2.0",
@@ -31,13 +31,29 @@
 		"directory": "taqueria-plugin-metadata"
 	},
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.27.2-alpha",
-		"@taqueria/protocol": "^0.27.2-alpha",
+		"@taqueria/node-sdk": "^0.25.16-rc",
+		"@taqueria/protocol": "^0.25.16-rc",
 		"prompts": "^2.4.2"
 	},
 	"devDependencies": {
 		"@types/prompts": "^2.0.14",
-		"parcel": "^2.8.0",
+		"tsup": "^6.1.3",
 		"typescript": "4.7.2"
+	},
+	"tsup": {
+		"entry": [
+			"index.ts"
+		],
+		"sourcemap": true,
+		"target": "node16",
+		"outDir": "./",
+		"dts": true,
+		"clean": false,
+		"skipNodeModulesBundle": true,
+		"platform": "node",
+		"format": [
+			"esm",
+			"cjs"
+		]
 	}
 }
