--- a/taqueria-plugin-taquito/package.json
+++ b/taqueria-plugin-taquito/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-taquito",
-	"version": "0.27.2-alpha",
+	"version": "0.25.16-rc",
 	"description": "A taqueria plugin for originating smart contracts using Taquito",
 	"targets": {
 		"default": {
@@ -13,7 +13,7 @@
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"pluginInfo": "npx ts-node index.ts --taqRun pluginInfo --i18n {\"foo:\"\"bar\"}",
-		"build": "npx tsc -noEmit && npx parcel build --no-cache 2>&1",
+		"build": "npx tsc -noEmit -p ./tsconfig.json && npx tsup",
 		"debugPluginInfo": "node --inspect-brk index.js --taqRun pluginInfo --i18n {\"foo:\"\"bar\"}"
 	},
 	"keywords": [
@@ -41,15 +41,31 @@
 		"url": "https://github.com/ecadlabs/taqueria/issues"
 	},
 	"homepage": "https://github.com/ecadlabs/taqueria#readme",
+	"dependencies": {
+		"@taqueria/node-sdk": "^0.25.16-rc",
+		"@taquito/michel-codec": "^15.0.0",
+		"@taquito/signer": "^15.0.0",
+		"@taquito/taquito": "^15.0.0",
+		"fast-glob": "^3.2.11"
+	},
 	"devDependencies": {
-		"parcel": "^2.8.0",
+		"tsup": "^6.1.3",
 		"typescript": "^4.7.2"
 	},
-	"dependencies": {
-		"@taqueria/node-sdk": "^0.27.2-alpha",
-		"@taquito/michel-codec": "^13.0.1",
-		"@taquito/signer": "^13.0.1",
-		"@taquito/taquito": "^13.0.1",
-		"fast-glob": "^3.2.11"
+	"tsup": {
+		"entry": [
+			"index.ts"
+		],
+		"sourcemap": true,
+		"target": "node16",
+		"outDir": "./",
+		"dts": true,
+		"clean": false,
+		"skipNodeModulesBundle": true,
+		"platform": "node",
+		"format": [
+			"esm",
+			"cjs"
+		]
 	}
 }
