--- a/taqueria-sdk/package.json
+++ b/taqueria-sdk/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/node-sdk",
-	"version": "0.27.2-alpha",
+	"version": "0.25.16-rc",
 	"description": "A TypeScript SDK for NodeJS used for Taqueria plugin development.",
 	"main": "./index.js",
 	"source": "./index.ts",
@@ -34,10 +34,10 @@
 	},
 	"homepage": "https://github.com/ecadlabs/taqueria#readme",
 	"dependencies": {
-		"@taqueria/protocol": "^0.27.2-alpha",
-		"@taquito/signer": "^13.0.1",
-		"@taquito/taquito": "^13.0.1",
-		"@taquito/utils": "^13.0.1",
+		"@taqueria/protocol": "^0.25.16-rc",
+		"@taquito/signer": "^15.0.0",
+		"@taquito/taquito": "^15.0.0",
+		"@taquito/utils": "^15.0.0",
 		"i18next": "^21.8.4",
 		"node-fetch": "^2.6.7",
 		"project-name-generator": "^2.1.9",
