✨ Feature ➾ 1162, Add baking options to flextesa plugin (#1645)
* Check for deno version before building

* Fixed typo

* Committing work thus far

* Fixed startup of Flextesa sandbox

* Committing work thus far

* Latest work

* Fix the interpretation and parsing of boolean options given to a plugin via its CLI arguments

* Made flextesa plugin image agnostic

* Adjusted spawnCmd to have a similar interface as execCmd

* Removed unused property for SandboxConfig objects

* Ensure that accounts and baking flags are set correctly when the oxheadalpha flextesa image is used directly

* Finished manually baking

* Finished baking on demand

* Remove auto baking option, as 'taq bake -w' can do that

* Adjusted usage of spawnCmd to match execCmd

* Cleanup

* Improved startup speed of sandbox

* Adjusted final msg to indicate whether a sandbox was started

* Fixed broken E2E tests due to the version of core relying on a different version of the protocol package than the CLI

* Committing work thus far

* Finished tests for now

* Updated docs

* Removing protocol for mainnet config

* Fixed memory leak in test

* change to use debug flag

* cleanup the cli-init tests

* Fixed broken ligo tests

* Ensure that stderr is part of execCmd error

* Added detection and utilization of protocol in sandbox

* Removed the inclusion of a test project

* Fixed ligo test suite

* Fixed broken tezos-client tests due to change in execCmd

* Re-added back cors env setting

* Fixed failing taquito-flextesa spec by a) writing my own exec function; b) adding 20 second sleeps for the first two test cases

Co-authored-by: Michael Kernaghan <michaelkernaghan@ecadlabs.com>

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -213,15 +213,9 @@ jobs:
       - name: Add working dir to PATH
         run: echo "$(pwd)" >> $GITHUB_PATH
 
-      - run: npm ci
-
       - name: Build all
-        run: |
-          npm run build-types
-          npm run build:packages 
-          ./bin/build.sh
-          npm run build:docker
-
+        run: ./bin/build-all.sh
+        
       - name: Run unit tests
         run: npm run test:unit -w tests
 
