Disable NPM caches for macOS pipelines

--- a/.github/workflows/vscode-extension.yml
+++ b/.github/workflows/vscode-extension.yml
@@ -49,7 +49,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: lts/gallium
-          cache: "npm"
+          cache: ${{ runner.os == 'macOS' && null || 'npm' }}
 
 
       - name: Install Deno
@@ -119,7 +119,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: lts/gallium
-          cache: "npm"
+          cache: ${{ runner.os == 'macOS' && null || 'npm' }}
 
       - name: Add working dir to PATH
         run: echo "$(pwd)" >> $GITHUB_PATH
