--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
     - uses: actions/setup-node@v3
       with:
         node-version: lts/gallium
-        cache: "npm"
+        cache: ${{ runner.os == 'macOS' && null || 'npm' }}
 
     - name: check for VSCode changes
       uses: dorny/paths-filter@v2
@@ -151,7 +151,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: lts/gallium
-          cache: "npm"
+          cache: ${{ runner.os == 'macOS' && null || 'npm' }}
 
       # This step currently attempts to put all test files found in the e2e folder into 4 equal sized buckets. The output is a list of lists
       - id: set-test-chunks
@@ -204,7 +204,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: lts/gallium
-          cache: "npm"
+          cache: ${{ runner.os == 'macOS' && null || 'npm' }}
 
       - uses: denoland/setup-deno@v1
         with:
@@ -267,7 +267,7 @@ jobs:
         with: 
           scope: "${{ env.SCOPE }}"
           node-version: lts/gallium
-          cache: "npm"
+          cache: ${{ runner.os == 'macOS' && null || 'npm' }}
 
       - name: Add working dir to PATH
         run: echo "$(pwd)" >> $GITHUB_PATH
