--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -201,6 +201,7 @@ jobs:
     if: ${{ github.event_name != 'release' && !(startsWith(github.ref, 'refs/tags/v')) }}
     steps:
       - uses: actions/checkout@v3
+      - run: echo "${{ runner.os }}"
       - uses: actions/setup-node@v3
         with:
           node-version: lts/gallium
