--- a/package.json
+++ b/package.json
@@ -52,10 +52,11 @@
 		"husky": "^8.0.1",
 		"lerna": "^6.0.1",
 		"lint-staged": "^12.4.1",
+		"npm-check-updates": "^16.6.2",
 		"ts-jest": "^28.0.7",
 		"ts-node": "^10.8.0",
 		"ts-to-zod": "^1.13.1",
-		"tsup": "^6.1.3",
+		"tsup": "^6.5.0",
 		"typescript": "^4.7.4",
 		"with-staged": "^1.0.2"
 	},
