--- a/taqueria-sdk/package.json
+++ b/taqueria-sdk/package.json
@@ -49,11 +49,10 @@
 	},
 	"devDependencies": {
 		"@bevry/jsonfile": "^1.3.0",
-		"@types/json-schema-generator": "^2.0.0",
 		"@types/node": "^17.0.12",
 		"@types/project-name-generator": "^2.1.1",
 		"@types/yargs": "^17.0.7",
-		"esbuild": "^0.14.39",
+		"tsup": "^6.5.0",
 		"typescript": "^4.7.2"
 	},
 	"tsup": {
