--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -225,6 +225,8 @@ jobs:
 
       - name: Run integration tests
         run: npm run test:integration -w tests
+        if: ${{ !contains(github.event.head_commit.message, 'integration-tests') }}
+        
       - name: Run e2e tests
         run: npm run test:e2e -w tests ${{ fromJSON(env.CHUNKS)[matrix.chunk-ids] }}
         env:
