--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,6 @@ jobs:
     - uses: actions/setup-node@v3
       with:
         node-version: lts/gallium
-        cache: "npm"
 
     - name: check for VSCode changes
       uses: dorny/paths-filter@v2
@@ -151,7 +150,6 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: lts/gallium
-          cache: "npm"
 
       # This step currently attempts to put all test files found in the e2e folder into 4 equal sized buckets. The output is a list of lists
       - id: set-test-chunks
@@ -204,7 +202,6 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: lts/gallium
-          cache: "npm"
 
       - uses: denoland/setup-deno@v1
         with:
@@ -221,7 +218,7 @@ jobs:
 
       - name: Run integration tests
         run: npm run test:integration -w tests
-        if: ${{ contains(github.event.head_commit.message, 'integration-tests') }}
+        if: ${{ contains(github.event.head_commit.message, '[integration-tests]') }}
         
       - name: Run e2e tests
         run: npm run test:e2e -w tests ${{ fromJSON(env.CHUNKS)[matrix.chunk-ids] }}
@@ -263,7 +260,6 @@ jobs:
         with: 
           scope: "${{ env.SCOPE }}"
           node-version: lts/gallium
-          cache: "npm"
 
       - name: Add working dir to PATH
         run: echo "$(pwd)" >> $GITHUB_PATH
