--- a/taqueria-vscode-extension/package.json
+++ b/taqueria-vscode-extension/package.json
@@ -764,6 +764,7 @@
 		"@types/glob": "^7.2.0",
 		"@types/mocha": "^5.2.6",
 		"@types/node": "^17.0.17",
+		"@types/pg": "^8.6.6",
 		"@types/promise-memoize": "^1.2.1",
 		"@types/semver": "^7.3.10",
 		"@types/vscode": "1.63.0",
@@ -775,6 +776,7 @@
 		"fs-extra": "^10.1.0",
 		"glob": "^7.2.0",
 		"mocha": "^9.2.1",
+		"pg-types": "^4.0.0",
 		"typescript": "4.7.2",
 		"vsce": "^2.6.4"
 	},
@@ -785,6 +787,7 @@
 		"comment-json": "^4.1.1",
 		"eventsource": "^2.0.2",
 		"node-fetch-commonjs": "^3.1.1",
+		"pg": "^8.8.0",
 		"promise-memoize": "^1.2.1",
 		"rambda": "^7.0.1",
 		"rxjs": "^7.5.6",
