--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -224,7 +224,7 @@ jobs:
         run: npm run test:e2e -w tests ${{ fromJSON(env.CHUNKS)[matrix.chunk-ids] }}
         env:
           CHUNKS: ${{ needs.gather-info-for-e2e-tests.outputs['test-chunks-formatted'] }}
-
+## Another comment
   report-e2e-status:
     needs: run-tests
     if:  ${{ failure() && github.event_name != 'release' }}
