👷 Refactor ➾ Refactored google analytics code by separating functionality into a separate package (#1741)
* Refactored google analytics code by separating functionality into a separate package that can be consumed via the CLI and VSCode called @taqueria/analytics. In this branch, the CLI is the only consumer of this package.

* Added tsconfig to taqueria/analyics package

* Pass fetch to runtime dependency to analytics package

* Ensure that when calling sendEvent to track an error, that we continue to throw the original error

--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
 	"workspaces": [
 		"./taqueria-protocol",
 		"./taqueria-sdk",
+		"./taqueria-analytics",
 		"./taqueria-state",
 		"./taqueria-toolkit",
 		"./taqueria-utils",
