--- a/taqueria-vscode-extension/package.json
+++ b/taqueria-vscode-extension/package.json
@@ -766,7 +766,7 @@
 		"@types/node": "^17.0.17",
 		"@types/promise-memoize": "^1.2.1",
 		"@types/semver": "^7.3.10",
-		"@types/vscode": "1.63.0",
+		"@types/vscode": "1.73.0",
 		"@typescript-eslint/eslint-plugin": "^5.9.1",
 		"@typescript-eslint/parser": "^5.9.1",
 		"@vscode/test-electron": "^2.1.2",
@@ -780,6 +780,7 @@
 	},
 	"dependencies": {
 		"@microsoft/signalr": "^6.0.8",
+		"@taqueria/analytics": "^0.25.16-rc",
 		"@taqueria/protocol": "^0.25.16-rc",
 		"cli-table3": "^0.6.2",
 		"comment-json": "^4.1.1",
