--- a/taqueria-vscode-extension/package.json
+++ b/taqueria-vscode-extension/package.json
@@ -6,7 +6,7 @@
 	"version": "0.25.16",
 	"private": true,
 	"engines": {
-		"vscode": "^1.68.1",
+		"vscode": "1.73.0",
 		"node": "^16.0.0"
 	},
 	"engineStrict": true,
