--- a/taqueria-protocol/package.json
+++ b/taqueria-protocol/package.json
@@ -57,27 +57,9 @@
 		"@peculiar/webcrypto": "^1.4.0",
 		"batching-toposort": "^1.2.0",
 		"fluture": "^14.0.0",
+		"i18next": "^21.8.4",
 		"rambda": "^7.2.1",
 		"rambdax": "^8.1.0",
-		"zod": "^3.17.3",
-		"i18next": "^21.8.4"
-	},
-	"tsup": {
-		"entry": [
-			"[!.]+.ts",
-			"out/types/*.ts",
-			"out/*.ts"
-		],
-		"sourcemap": true,
-		"target": "node16",
-		"outDir": "./",
-		"dts": false,
-		"clean": false,
-		"skipNodeModulesBundle": true,
-		"platform": "node",
-		"format": [
-			"esm",
-			"cjs"
-		]
+		"zod": "^3.17.3"
 	}
 }
