--- a/taqueria-protocol/tsconfig.json
+++ b/taqueria-protocol/tsconfig.json
@@ -11,7 +11,7 @@
 		// "disableReferencedProjectLoad": true,             /* Reduce the number of projects loaded automatically by TypeScript. */
 
 		/* Language and Environment */
-		"target": "ES2021", /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
+		"target": "es2019", /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
 		"lib": [
 			"ES2021.String"
 		], /* Specify a set of bundled library declaration files that describe the target runtime environment. */
