--- a/taqueria-toolkit/package.json
+++ b/taqueria-toolkit/package.json
@@ -2,17 +2,13 @@
 	"name": "@taqueria/toolkit",
 	"version": "0.25.16-rc",
 	"description": "A TypeScript library for NodeJS to work with Taqueria projects",
-	"main": "./index.js",
 	"source": "./index.ts",
-	"targets": {
-		"main": {
-			"context": "node",
-			"isLibrary": true
-		}
+	"bin": {
+		"withTaq": "./bin/run.js"
 	},
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"build": "npx tsc -p ./tsconfig.json && npx esbuild --bundle ./index.ts --outfile=./index.js --minify --platform=node --sourcemap --target=es6"
+		"build": "npx tsc -p ./tsconfig.json && npx tsup"
 	},
 	"types": "./index.d.ts",
 	"keywords": [
@@ -33,8 +29,42 @@
 	},
 	"homepage": "https://github.com/ecadlabs/taqueria#readme",
 	"devDependencies": {
+		"@types/cross-spawn": "^6.0.2",
 		"@types/node": "^17.0.12",
-		"esbuild": "^0.14.39",
+		"@types/yargs": "^17.0.19",
+		"tsup": "^6.5.0",
 		"typescript": "^4.7.2"
-	}
+	},
+	"dependencies": {
+		"@taqueria/protocol": "0.25.16-rc",
+		"cross-spawn": "^7.0.3",
+		"yargs": "^17.6.2"
+	},
+	"tsup": [
+		{
+			"entry": [
+				"index.ts"
+			],
+			"sourcemap": true,
+			"target": "es2018",
+			"outDir": "./",
+			"dts": true,
+			"clean": false,
+			"shims": true,
+			"skipNodeModulesBundle": false,
+			"platform": "browser"
+		},
+		{
+			"entry": [
+				"bin/run.ts"
+			],
+			"sourcemap": true,
+			"target": "node16",
+			"outDir": "./bin/",
+			"dts": false,
+			"clean": false,
+			"skipNodeModulesBundle": true,
+			"platform": "node"
+		}
+	]
 }
