--- a/taqueria-vscode-extension/package.json
+++ b/taqueria-vscode-extension/package.json
@@ -239,7 +239,7 @@
 				"category": "Taqueria",
 				"title": "Compile Current File",
 				"shortTitle": "compile current file",
-				"enablement": "resourceExtname in @taqueria/supported-smart-contract-extensions && editorFocus",
+				"enablement": "resourceExtname in @taqueria/supported-smart-contract-extensions",
 				"icon": "$(combine)"
 			},
 			{
