--- a/taqueria-toolkit/package.json
+++ b/taqueria-toolkit/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/toolkit",
-	"version": "0.25.16-rc",
+	"version": "0.25.30-rc",
 	"description": "A TypeScript library for NodeJS to work with Taqueria projects",
 	"source": "./index.ts",
 	"bin": {
@@ -36,7 +36,7 @@
 		"typescript": "^4.7.2"
 	},
 	"dependencies": {
-		"@taqueria/protocol": "0.25.16-rc",
+		"@taqueria/protocol": "^0.25.30-rc",
 		"cross-spawn": "^7.0.3",
 		"yargs": "^17.6.2"
 	},
