--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
 	"homepage": "https://github.com/ecadlabs/taqueria#readme",
 	"devDependencies": {
 		"@gmrchk/cli-testing-library": "^0.1.2",
-		"@taqueria/plugin-core": "file:taqueria-plugin-core",
+		"@taqueria/plugin-core": "^0.25.16-rc",
 		"chokidar-cli": "^3.0.0",
 		"dprint": "^0.27.1",
 		"eta": "^1.12.3",
