--- a/taqueria-plugin-flextesa/package.json
+++ b/taqueria-plugin-flextesa/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-flextesa",
-	"version": "0.27.17-rc",
+	"version": "0.28.0",
 	"description": "A plugin for Taqueria providing local sandbox capabilities built on Flextesa",
 	"keywords": [
 		"taqueria",
@@ -34,8 +34,8 @@
 		"directory": "taqueria-plugin-flextesa"
 	},
 	"dependencies": {
-		"@taqueria/node-sdk": "^0.27.17-rc",
-		"@taqueria/protocol": "^0.27.17-rc",
+		"@taqueria/node-sdk": "^0.28.0",
+		"@taqueria/protocol": "^0.28.0",
 		"async-retry": "^1.3.3",
 		"fast-glob": "^3.2.11",
 		"portfinder": "^1.0.28",
