--- a/taqueria-plugin-mock/package.json
+++ b/taqueria-plugin-mock/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/plugin-mock",
-	"version": "0.25.16-rc",
+	"version": "0.28.0",
 	"description": "A plugin used to test Taqueria",
 	"private": true,
 	"scripts": {
