--- a/taqueria-vscode-extension/package.json
+++ b/taqueria-vscode-extension/package.json
@@ -730,8 +730,8 @@
 	},
 	"dependencies": {
 		"@microsoft/signalr": "^6.0.8",
-		"@taqueria/analytics": "^0.26.27-rc",
-		"@taqueria/protocol": "^0.27.0-rc",
+		"@taqueria/analytics": "^0.28.0",
+		"@taqueria/protocol": "^0.28.0",
 		"cli-table3": "^0.6.2",
 		"comment-json": "^4.1.1",
 		"eventsource": "^2.0.2",
