--- a/taqueria-protocol/package.json
+++ b/taqueria-protocol/package.json
@@ -30,6 +30,7 @@
 	},
 	"homepage": "https://github.com/ecadlabs/taqueria#readme",
 	"devDependencies": {
+		"esbuild-plugin-text-replace": "^1.2.0",
 		"ts-to-zod": "^1.13.1",
 		"tsup": "^6.5.0",
 		"typescript": "^4.7.2"
