--- a/taqueria-vscode-extension/package.json
+++ b/taqueria-vscode-extension/package.json
@@ -3,7 +3,7 @@
 	"displayName": "Taqueria",
 	"description": "A better way to build on Tezos",
 	"publisher": "ecadlabs",
-	"version": "0.25.16",
+	"version": "0.28.0",
 	"private": true,
 	"engines": {
 		"vscode": "^1.68.1",
@@ -53,24 +53,6 @@
 		"url": "https://github.com/ecadlabs/taqueria/issues"
 	},
 	"homepage": "https://github.com/ecadlabs/taqueria#readme",
-	"keywords": [
-		"taqueria",
-		"tezos",
-		"build",
-		"test",
-		"deploy",
-		"originate",
-		"ecad",
-		"ecadlabs",
-		"NFT",
-		"DeFi",
-		"blockchain",
-		"smart contract",
-		"Ligo",
-		"Michelson",
-		"SmartPy",
-		"Archetype"
-	],
 	"activationEvents": [
 		"onCommand:taqueria.init",
 		"onCommand:taqueria.scaffold",
@@ -748,8 +730,8 @@
 	},
 	"dependencies": {
 		"@microsoft/signalr": "^6.0.8",
-		"@taqueria/analytics": "^0.25.16-rc",
-		"@taqueria/protocol": "^0.25.16-rc",
+		"@taqueria/analytics": "^0.28.0",
+		"@taqueria/protocol": "^0.28.0",
 		"cli-table3": "^0.6.2",
 		"comment-json": "^4.1.1",
 		"eventsource": "^2.0.2",
