--- a/website/package.json
+++ b/website/package.json
@@ -15,12 +15,11 @@
   },
   "dependencies": {
     "@docusaurus-terminology/parser": "^1.3.0",
-    "@docusaurus-terminology/term": "^1.0.0",
-    "@docusaurus/core": "^2.2.0",
-    "@docusaurus/plugin-google-analytics": "^2.2.0",
-    "@docusaurus/plugin-google-gtag": "^2.2.0",
-    "@docusaurus/plugin-sitemap": "^2.2.0",
-    "@docusaurus/preset-classic": "^2.2.0",
+    "@docusaurus/core": "^2.3.0",
+    "@docusaurus/plugin-google-analytics": "^2.3.0",
+    "@docusaurus/plugin-google-gtag": "^2.3.0",
+    "@docusaurus/plugin-sitemap": "^2.3.0",
+    "@docusaurus/preset-classic": "^2.3.0",
     "@mdx-js/react": "^1.6.22",
     "@svgr/webpack": "^5.5.0",
     "@taquito/beacon-wallet": "^15.0.0",
@@ -53,6 +52,8 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-export-default-from": "^7.18.10",
+    "@docusaurus/types": "^2.3.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
     "path-browserify": "^1.0.1",
