Fix ➾ Closes #1775, ensures that protocol package can be consumed by nodejs, deno, and browsers (#1836)
* Release v0.27.0-rc

* In analytics package, updated dependency version of protocol package to 0.27.0-rc

* Release v0.27.1-rc

* Release v0.27.2-rc

* Release v0.27.3-rc

* Release v0.27.4-rc

* Release v0.27.5

* Release v0.27.6-rc

* Remove all keywords from vscode extension package.json

* Bumping versions

* Updated mock plugin to use the latest version of the SDK

* 🛠️ Fix ➾ Closes #1824, transfer task not finding aliases (#1826)

* Adjust transformation logic from V2 to Config runtime object to include contracts/aliases

* Removed debugger statement

* Version bump

* Version bump

* Update other references to 0.28.0

* WIP of release notes

* Update Release Notes for v0.28.0

* Added error handling to withTaq binary

* Show Base64 warning whenever a key cannot be set

* Adjusted protocol package to be properly consumable in browser, as well as add a means for toolkit package to populate the process.env

* Update release-notes.mdx

* Update release-notes.mdx

---------

Co-authored-by: Michael Kernaghan <michaelkernaghan@ecadlabs.com>
Co-authored-by: Edward Garson <egarson@gmail.com>

--- a/taqueria-protocol/package.json
+++ b/taqueria-protocol/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@taqueria/protocol",
-	"version": "0.28.0",
+	"version": "0.28.1",
 	"description": "A TypeScript package which contains types that are to be shared between @taqueria/node-sdk and @taqueria/taqueria.",
 	"main": "index.js",
 	"scripts": {
@@ -30,6 +30,7 @@
 	},
 	"homepage": "https://github.com/ecadlabs/taqueria#readme",
 	"devDependencies": {
+		"esbuild-plugin-text-replace": "^1.2.0",
 		"ts-to-zod": "^1.13.1",
 		"tsup": "^6.5.0",
 		"typescript": "^4.7.2"
