--- a/taqueria-plugin-taquito/tsconfig.json
+++ b/taqueria-plugin-taquito/tsconfig.json
@@ -13,7 +13,8 @@
 		/* Language and Environment */
 		"target": "ES2021", /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
 		"lib": [
-			"ES2021.String"
+			"ES2021.String",
+			"ES2021.Promise"
 		], /* Specify a set of bundled library declaration files that describe the target runtime environment. */
 		// "jsx": "preserve",                                /* Specify what JSX code is generated. */
 		// "experimentalDecorators": true,                   /* Enable experimental support for TC39 stage 2 draft decorators. */
