--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -158,12 +158,19 @@ jobs:
         name: Set Chunks
         run: echo "::set-output name=test-chunks::$(npx jest --listTests --json tests/e2e/ | jq -c '[_nwise(length / 2 | ceil)]')"
 
+      # TEMP Step - reduce chunks to just the smartpy tests
+      - id: temp-adjust-chunks
+        name: Adjust Chunks
+        run: echo "::set-output name=test-chunks::$(echo $CHUNKS | jq 'flatten | map(select(. | contains("smartpy-plugin-e2e-tests.spec.ts"))) | [.]')"
+        env:
+          CHUNKS: ${{ steps['set-test-chunks'].outputs['test-chunks'] }}
+
       # This step just creates a list of numbers representing the different buckets of tests
       - id: set-test-chunk-ids
         name: Set Chunk IDs
         run: echo "::set-output name=test-chunk-ids::$(echo $CHUNKS | jq -c 'to_entries | map(.key)')"
         env:
-          CHUNKS: ${{ steps['set-test-chunks'].outputs['test-chunks'] }}
+          CHUNKS: ${{ steps['temp-adjust-chunks'].outputs['test-chunks'] }}
 
       # This step will take in the buckets of tests and format the names to remove the absolute path part leaving only the name we care about
       - id: format-test-chunks
