--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -180,11 +180,18 @@ jobs:
           CHUNKS: ${{ steps['temp-adjust-chunks'].outputs['test-chunks'] }}
 
       # This step will take in the buckets of tests and format the names to remove the absolute path part leaving only the name we care about
+      # - id: format-test-chunks
+      #   name: Format Chunks
+      #   run: echo "::set-output name=test-chunks-formatted::$(echo $CHUNKS | jq -c '[.[] | join(" ") | sub("(/home|/Users)/runner/work/taqueria/taqueria/tests/e2e/";"";"g")]')"
+      #   env:
+      #     CHUNKS: ${{ steps['set-test-chunks'].outputs['test-chunks'] }}
+      
+      # Temp Step - use output from temp-adjust-chunks
       - id: format-test-chunks
         name: Format Chunks
         run: echo "::set-output name=test-chunks-formatted::$(echo $CHUNKS | jq -c '[.[] | join(" ") | sub("(/home|/Users)/runner/work/taqueria/taqueria/tests/e2e/";"";"g")]')"
         env:
-          CHUNKS: ${{ steps['set-test-chunks'].outputs['test-chunks'] }}
+          CHUNKS: ${{ steps['temp-adjust-chunks'].outputs['test-chunks'] }}
 
   run-tests:
     name: OS ${{ matrix.os }} test chunk ${{ matrix.chunk-ids }}
