--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -157,7 +157,7 @@ jobs:
       - id: set-test-chunks
         name: Set Chunks
         # Uncomment the line above to run a specific test
-        run: echo "::set-output name=test-chunks::[['tests/e2e/smartpy-plugin-e2e-tests.spec.ts']]"
+        run: echo "::set-output name=test-chunks::[[\"tests/e2e/smartpy-plugin-e2e-tests.spec.ts\"]]"
         # Uncomment the line below to run all tests
         # run: echo "::set-output name=test-chunks::$(npx jest --listTests --json tests/e2e/ | jq -c '[_nwise(length / 2 | ceil)]')"
 
