--- a/taqueria-plugin-smartpy/package.json
+++ b/taqueria-plugin-smartpy/package.json
@@ -10,6 +10,16 @@
 			"isLibrary": true
 		}
 	},
+	"files": [
+		"index.d.ts",
+		"index.js",
+		"index.js.map",
+		"index.mjs",
+		"index.mjs.map",
+		"install.sh",
+		"README.md",
+		"smartpy-v0.16.0"
+	],
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"build": "npx tsc -noEmit -p ./tsconfig.json && npx tsup",
