--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -156,6 +156,9 @@ jobs:
       # This step currently attempts to put all test files found in the e2e folder into 4 equal sized buckets. The output is a list of lists
       - id: set-test-chunks
         name: Set Chunks
+        # Uncomment the line above to run a specific test
+        #run: echo "::set-output name=test-chunks::[[\"tests/e2e/smartpy-plugin-e2e-tests.spec.ts\"]]"
+        # Uncomment the line below to run all tests
         run: echo "::set-output name=test-chunks::$(npx jest --listTests --json tests/e2e/ | jq -c '[_nwise(length / 2 | ceil)]')"
 
       # This step just creates a list of numbers representing the different buckets of tests
