--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -115,24 +115,24 @@ jobs:
           fi
           mv "${{ matrix.taqueria_bin }}" "taq.${{ matrix.deno_target }}"
 
-      - name: Authenticate with GCP
-        id: gcp-auth
-        uses: google-github-actions/auth@v0
-        with:
-          workload_identity_provider: "projects/${{ secrets.GCP_PROJECT }}/locations/global/workloadIdentityPools/github-actions-storage-pool/providers/github-actions-oidc-provider"
-          service_account: "${{ secrets.GCP_SERVICE_ACCOUNT }}"
+      # - name: Authenticate with GCP
+      #   id: gcp-auth
+      #   uses: google-github-actions/auth@v0
+      #   with:
+      #     workload_identity_provider: "projects/${{ secrets.GCP_PROJECT }}/locations/global/workloadIdentityPools/github-actions-storage-pool/providers/github-actions-oidc-provider"
+      #     service_account: "${{ secrets.GCP_SERVICE_ACCOUNT }}"
 
-      - name: Upload binary to GCP
-        id: upload-file
-        uses: 'google-github-actions/upload-cloud-storage@v0'
-        with:
-          path: "taq.${{ matrix.deno_target }}"
-          destination: "taqueria-artifacts/${{ github.ref }}"
+      # - name: Upload binary to GCP
+      #   id: upload-file
+      #   uses: 'google-github-actions/upload-cloud-storage@v0'
+      #   with:
+      #     path: "taq.${{ matrix.deno_target }}"
+      #     destination: "taqueria-artifacts/${{ github.ref }}"
 
-      - name: Set public url
-        id: public-url
-        run: |
-          echo "::set-output name=${{ matrix.os_short }}::https://storage.googleapis.com/taqueria-artifacts/${{ steps.upload-file.outputs.uploaded }}"
+      # - name: Set public url
+      #   id: public-url
+      #   run: |
+      #     echo "::set-output name=${{ matrix.os_short }}::https://storage.googleapis.com/taqueria-artifacts/${{ steps.upload-file.outputs.uploaded }}"
 
   gather-info-for-e2e-tests:
     runs-on: ubuntu-latest
@@ -183,18 +183,6 @@ jobs:
       matrix:
         os: [ubuntu-latest, ecad-macmini]
         chunk-ids: ${{ fromJson(needs.gather-info-for-e2e-tests.outputs['test-chunk-ids']) }}
-        include:
-        - os: ubuntu-latest
-          url: ${{ needs.build-binaries.outputs.public-url-ubuntu }}
-          final-name: taq
-          make-executable-cmd: chmod +x
-          get-current-dir: echo "$(pwd)"
-        - os: ecad-macmini
-          url: ${{ needs.build-binaries.outputs.public-url-macos }}
-          final-name: taq
-          make-executable-cmd: chmod +x
-          get-current-dir: echo "$(pwd)"
-
     env:
       UNLIMITED_PINATA_TOKEN: ${{ secrets.PINATA_JWT_TOKEN }}
       SCAFFOLDING_PAT: ${{ secrets.SCAFFOLDING_PAT }}
