--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -208,6 +208,10 @@ jobs:
         with:
           deno-version: "${{ env.DENO_VERSION }}"
 
+      - name: Setup Docker (on macos)
+        run: brew install docker
+        if: matrix.os == 'MacOS'
+
       - name: Add working dir to PATH
         run: echo "$(pwd)" >> $GITHUB_PATH
 
