--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -208,12 +208,9 @@ jobs:
         with:
           deno-version: "${{ env.DENO_VERSION }}"
 
-      - name: Output OS
-        run: echo "${{ runner.os }} ${{ matrix.os }}"
-
       - name: Setup Docker (on macos)
         run: brew install docker
-        if: matrix.os == 'macOS'
+        if: runner.os == 'macOS'
 
       - name: Add working dir to PATH
         run: echo "$(pwd)" >> $GITHUB_PATH
