--- a/.github/workflows/add-pr-to-scrum-board.yml
+++ b/.github/workflows/add-pr-to-scrum-board.yml
@@ -10,8 +10,10 @@ jobs:
     name: Add issue to project
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/add-to-project@v0.3.0
-        with:
-          project-url: https://github.com/orgs/ecadlabs/projects/9
-          github-token: ${{ secrets.ADD_TO_PROJECT_PAT }}
-          name: Move PR's to current sprint
+      - name: Noop
+        run: echo "noop"
+      # - uses: actions/add-to-project@v0.3.0
+      #   with:
+      #     project-url: https://github.com/orgs/ecadlabs/projects/9
+      #     github-token: ${{ secrets.ADD_TO_PROJECT_PAT }}
+      #     name: Move PR's to current sprint
