--- a/taqueria-toolkit/package.json
+++ b/taqueria-toolkit/package.json
@@ -15,20 +15,20 @@
 	"keywords": [
 		"taqueria",
 		"tezos",
-		"ecad",
+		"pinnaclelabs",
 		"ecadlabs"
 	],
-	"author": "ECAD Labs",
+	"author": "Pinnacle Labs",
 	"license": "Apache-2.0",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/ecadlabs/taqueria.git",
+		"url": "https://github.com/pinnacle-labs/taqueria.git",
 		"directory": "taqueria-toolkit"
 	},
 	"bugs": {
-		"url": "https://github.com/ecadlabs/taqueria/issues"
+		"url": "https://github.com/pinnacle-labs/taqueria/issues"
 	},
-	"homepage": "https://github.com/ecadlabs/taqueria#readme",
+	"homepage": "https://github.com/pinnacle-labs/taqueria#readme",
 	"devDependencies": {
 		"@types/cross-spawn": "^6.0.2",
 		"@types/node": "^17.0.12",
