--- a/taqueria-plugin-core/package.json
+++ b/taqueria-plugin-core/package.json
@@ -19,25 +19,25 @@
 	"keywords": [
 		"taqueria",
 		"tezos",
-		"ecad",
-		"ecadlabs",
+		"pinnacle-labs",
+		"pinnaclelabs",
 		"plugin",
 		"core"
 	],
 	"engines": {
 		"node": ">=16"
 	},
-	"author": "ECAD Labs",
+	"author": "Pinnacle Labs",
 	"license": "Apache-2.0",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/ecadlabs/taqueria.git",
+		"url": "https://github.com/pinnacle-labs/taqueria.git",
 		"directory": "taqueria-plugin-core"
 	},
 	"bugs": {
-		"url": "https://github.com/ecadlabs/taqueria/issues"
+		"url": "https://github.com/pinnacle-labs/taqueria/issues"
 	},
-	"homepage": "https://github.com/ecadlabs/taqueria#readme",
+	"homepage": "https://github.com/pinnacle-labs/taqueria#readme",
 	"devDependencies": {
 		"tsup": "^6.5.0",
 		"typescript": "^4.7.2"
