--- a/taqueria-vscode-extension/package.json
+++ b/taqueria-vscode-extension/package.json
@@ -2,7 +2,7 @@
 	"name": "taqueria-vscode",
 	"displayName": "Taqueria",
 	"description": "A better way to build on Tezos",
-	"publisher": "ecadlabs",
+	"publisher": "PinnacleLabs",
 	"version": "0.28.6",
 	"private": true,
 	"engines": {
@@ -42,17 +42,17 @@
 			}
 		}
 	},
-	"author": "ECAD Labs Inc.",
+	"author": "Pinnacle Labs Limited",
 	"license": "Apache-2.0",
 	"icon": "images/taqueria-icon.png",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/ecadlabs/taqueria.git"
+		"url": "https://github.com/pinnacle-labs/taqueria.git"
 	},
 	"bugs": {
-		"url": "https://github.com/ecadlabs/taqueria/issues"
+		"url": "https://github.com/pinnacle-labs/taqueria/issues"
 	},
-	"homepage": "https://github.com/ecadlabs/taqueria#readme",
+	"homepage": "https://github.com/pinnacle-labs/taqueria#readme",
 	"activationEvents": [
 		"onCommand:taqueria.init",
 		"onCommand:taqueria.scaffold",
