Attempt to fix CI

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
 		"./taqueria-utils",
 		"./taqueria-flextesa-manager",
 		"./taqueria-vscode-extension",
+		"./taqueria-vscode-extension-web-ui",
 		"./taqueria-plugin*",
 		"./tests"
 	],
